baclground-bland-mode

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div class="box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia autem est dolores enim dolorem architecto nemo, voluptas optio iste soluta velit voluptatum eum cupiditate omnis voluptatem quisquam, sapiente vero vel sequi earum, blanditiis dicta praesentium suscipit? Rerum perspiciatis accusamus necessitatibus architecto magni nobis molestiae blanditiis consequuntur officia, tempore porro veritatis perferendis at, aut voluptatibus itaque optio beatae ipsa. Amet, et aliquid harum asperiores fugit sapiente illum debitis ea deserunt aut corrupti accusantium, in numquam ducimus consequuntur adipisci inventore odit, soluta vitae. Beatae exercitationem nulla tenetur, aliquid asperiores voluptatum quidem eum reiciendis odio, esse porro architecto? Maiores amet quo, laborum pariatur aliquam iusto maxime dolorum doloribus quis cumque facilis quas quidem nemo hic. Nesciunt consequuntur repellat nobis vero fuga exercitationem deleniti qui debitis adipisci. Facere inventore quisquam perferendis in incidunt eaque ipsum consequuntur a recusandae, iste corporis sit! Officia, quasi quaerat. Eos quas ratione ad sit, nihil consequuntur exercitationem delectus odit praesentium ab, assumenda aliquam? Necessitatibus hic animi voluptates illo modi doloribus nam asperiores eaque quis tempore incidunt sit porro ratione, neque sapiente aliquid libero molestiae pariatur molestias, quaerat ducimus? Voluptatum itaque, modi deserunt eos harum tempora reprehenderit cum recusandae odit facere facilis consequatur voluptate deleniti, autem dolorem perspiciatis voluptatibus nam.</p></div>
+    <div class="box">
+        <h1>Riajul islam pavel</h1>
+    </div>
 </body>
 </html>
