css all background

--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="box">
-        <h1>Riajul islam pavel</h1>
-    </div>
+    <div class="box"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, aliquid dolor illo, vero molestias sunt non nemo distinctio tempore ullam, dolorem accusamus libero! Libero ad eaque labore inventore, at nobis nemo, quibusdam earum itaque quidem neque dolorum. Quo, eligendi reprehenderit fugit quis cupiditate repellendus! Soluta minus vitae dicta quas eos!</p></div>
 </body>
 </html>
