--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="box"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, aliquid dolor illo, vero molestias sunt non nemo distinctio tempore ullam, dolorem accusamus libero! Libero ad eaque labore inventore, at nobis nemo, quibusdam earum itaque quidem neque dolorum. Quo, eligendi reprehenderit fugit quis cupiditate repellendus! Soluta minus vitae dicta quas eos!</p></div>
+     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi soluta necessitatibus qui architecto expedita minus maiores quam iusto molestias. Inventore odit laudantium et, sed ipsam id enim atque repudiandae rerum.</p>
 </body>
 </html>
