--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi soluta necessitatibus qui architecto expedita minus maiores quam iusto molestias. Inventore odit laudantium et, sed ipsam id enim atque repudiandae rerum.</p>
+   
+     <div class="fahim">
+         
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet inventore neque atque, suscipit similique necessitatibus impedit magnam! Sint, modi quasi! Facilis harum odit ut repudiandae ad non voluptas. Natus blanditiis at accusantium modi, assumenda maiores ut possimus maxime soluta nam, similique facere enim perspiciatis aut. Libero voluptatibus sit deleniti voluptates.
+         Lorem, 
+     </div>
 </body>
 </html>
