--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
-    <div class="fahim">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum id, quo labore possimus beatae accusamus est culpa. Esse maiores eius tenetur iure perspiciatis. Nulla expedita dolorem natus impedit odit, repudiandae, dolore maxime esse nostrum accusantium, temporibus ratione doloremque. Quisquam accusamus rerum rem repellat, temporibus blanditiis voluptatibus distinctio omnis necessitatibus odio cum labore modi recusandae quod illum expedita vitae quia architecto soluta officiis iste eos nam dicta facere. Sed esse, magnam nemo sunt quaerat nulla facere eligendi culpa enim a vero, omnis cumque labore reprehenderit eum repellendus blanditiis mai</div>
-    <div class="pp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore non ullam eos voluptatibus nihil consectetur molestias, ex repellat iure, quis expedita libero culpa doloremque iste! Assumenda, harum doloribus! Laborum doloremque suscipit accusantium, soluta error, illo fugiat, consequuntur obcaecati possimus id deleniti labore laudantium sapiente eos totam ullam? Sunt, aliquam laboriosam harum mollitia repudiandae unde amet temporibus cum cumque similique debitis quo. Enim quos odio error beatae eos! Aut optio corrupti rerum vel voluptatibus quas perferendis nisi repudiandae. Ducimus, deserunt earum quidem consectetur est fuga iure consequuntur illum voluptas facilis, dolores quibusdam, commodi minus. Iure nesciunt sit facere fugit ut ducimus.</div>
-    <div class="ss">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sint, libero quos, deleniti dolorem aliquam optio a voluptate fugit doloribus voluptas nostrum facere alias iste exercitationem magni dolore voluptates eligendi voluptatum blanditiis soluta cum quaerat tempore? Sequi excepturi aliquid, sit dignissimos nam molestiae quia. Similique ad nostrum laudantium obcaecati vitae ea, reprehenderit officia porro rem ratione repudiandae hic accusantium facere praesentium id. Velit eligendi neque dignissimos fuga laboriosam optio dolores aliquid evenie</div>
+    <div class="box">
+        <h1>riajul islam pavel</h1>
+    </div>
 </body>
 </html>
