--- a/index.html
+++ b/index.html
@@ -4,14 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Basic Layout</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="boc"><h1>riajul islam pavel</h1>
-      Lortttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttteiiiiiiiiiiisicing elit. Saepe ut temporibus tenetur perspiciatis nostrum earum impedit accusantium veritatis repudiandae ad, ea enim, fuga quo mollitia voluptatibus exercitationem cupiditate, recusandae fugiat?<
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci recusandae blanditiis quis illum, provident, odio laborum veniam reiciendis ex, rem magni laboriosam autem deleniti reprehenderit quasi in fugiat tenetur optio voluptatibus dolore placeat ratione accusantium debitis! Nulla, quibusdam repellendus a omnis nam ea praesentium, ad pariatur non perferendis quod obcaecati esse unde placeat suscipit architecto saepe dicta excepturi inventore autem. Dolorum qui eveniet praesentium repellat aut vitae? Molestias, corporis placeat incidunt maiores officia minima, possimus doloremque soluta beatae hic laudantium quia quod fuga deleniti quaerat facilis sapiente? Sunt deleniti quas ullam error qui ratione eius, dolore quod libero dolores labore ipsam consectetur tenetur! Vel optio ipsa consectetur ex asperiores accusantium dicta, exercitationem vitae minus id quidem eos temporibus culpa perferendis! Iste sapiente hic beatae cumque aperiam, accusamus quod architecto dignissimos vitae tempore quas natus dolorum voluptas dolorem reiciendis facilis porro ratione accusantium. Eum blanditiis ipsum iusto inventore facilis velit iure dignissimos sunt. Aliquid ipsum porro voluptas magnam amet dolores cupiditate in, exercitationem labore neque quidem adipisci modi distinctio vel obcaecati ullam eligendi ab rem. Nam, repellendus placeat. Deserunt rerum quos praesentium ipsa sed illum veritatis, laborum doloribus maxime temporibus perspiciatis expedita vel ipsum eos laboriosam odit libero fugit, eaque illo?/div>
-
-
+    <div id="pavel">
+        <div class="header">
+            <h1>riajul islam pavel</h1>
+        </div>
+        <div class="menu">
+            <ul>
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Services</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div class="content">
+            <h2>Bacic Deugn layout</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error velit maxime cupiditate? Unde, non, doloremque, ea asperiores vel provident a expedita nisi neque veniam dicta quibusdam quas cupiditate sint dolores! Recusandae, aliquid. Architecto obcaecati cupiditate nihil assumenda earum rerum corporis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aspernatur eius laborum saepe deleniti optio eum, fuga est molestias dignissimos.</p>
+        </div>
+        <div class="sideber">
+            <ul>
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Services</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div class="footer">
+            Riajul islam @gmail.cm
+        </div>
+    </div>
 </body>
 </html>
