--- a/index.html
+++ b/index.html
@@ -8,34 +8,6 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div id="pavel">
-        <div class="header">
-            <h1>riajul islam pavel</h1>
-        </div>
-        <div class="menu">
-            <ul>
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Services</li>
-                <li>Contact</li>
-            </ul>
-        </div>
-        <div class="content">
-            <h2>Bacic Deugn layout</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error velit maxime cupiditate? Unde, non, doloremque, ea asperiores vel provident a expedita nisi neque veniam dicta quibusdam quas cupiditate sint dolores! Recusandae, aliquid. Architecto obcaecati cupiditate nihil assumenda earum rerum corporis.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aspernatur eius laborum saepe deleniti optio eum, fuga est molestias dignissimos.</p>
-        </div>
-        <div class="sideber">
-            <ul>
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Services</li>
-                <li>Contact</li>
-            </ul>
-        </div>
-        <div class="footer">
-            Riajul islam @gmail.cm
-        </div>
-    </div>
+<div class="box1"><h1>Riajul islam pavel</h1></div>
 </body>
 </html>
