--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<div class="box1"><h1>Riajul islam pavel</h1></div>
+<div class="box1">box1</div>
+<div class="box2">box2</div>
+<div class="box3">box3</div>
+<div class="box4">box4</div>
 </body>
 </html>
