--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<div class="box1">box1</div>
-<div class="box2">box2</div>
-<div class="box3">box3</div>
-<div class="box4">box4</div>
-<input type="text">
+    <h1>Transform 3D</h1>
+ <div class="box">
+     <div class="pavel">Riajul islam pavel</div>
+ </div>
+
+ 
+
+
 </body>
 </html>
