--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
     <h1>Transform 3D</h1>
- <div class="box">
-     <div class="pavel">Riajul islam pavel</div>
- </div>
+<div class="card">
+    <div class="content">
+        <div class="front">front</div>
+        <div class="back">back</div>
+    </div>
+</div>
 
  
 
