--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Transform 3D</h1>
-<div class="card">
-    <div class="content">
-        <div class="front">front</div>
-        <div class="back">back</div>
-    </div>
-</div>
+    <h1 style="text-align: center;">css card</h1>
+   <div class="card">
+       <div class="content">
+           <div class="front">front</div>
+           <div class="back">back</div>
+       </div>
+   </div>
+
 
  
 
