--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>css3</title>
-    <link rel="shortcut icon" href="./images/211621_c_right_arrow_icon.png" type="image/x-icon">
+    <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="box">
-        <div class="box1"></div>
-    </div>
-
+<div class="box">riajul</div>
+<div class="box1">pavel</div>
+<div class="box2"></div>
 </body>
 </html>
