css animation card design

--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-<div class="box">riajul</div>
-<div class="box1">pavel</div>
-<div class="box2"></div>
+<section class="card">
+    <div class="box container">
+        <div class="inner">box1</div>
+    </div>
+    <div class="box container">
+        <div class="inner">box2</div>
+    </div>
+    <div class="box container">
+        <div class="inner">box3</div>
+    </div>
+</section>
+
 </body>
 </html>
