--- a/index.html
+++ b/index.html
@@ -6,20 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-<section class="card">
-    <div class="box container">
-        <div class="inner">box1</div>
-    </div>
-    <div class="box container">
-        <div class="inner">box2</div>
-    </div>
-    <div class="box container">
-        <div class="inner">box3</div>
-    </div>
-</section>
-
+<div class="container">
+    <div class="box1">box1</div>
+    <div class="box1">box2</div>
+    <div class="box1">box3</div>
+    <div class="box1">box4</div>
+</div>
 </body>
 </html>
