--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<div class="container">
-    <div class="box1">box1</div>
-    <div class="box1">box2</div>
-    <div class="box1">box3</div>
-    <div class="box1">box4</div>
-</div>
+    <section class="card">
+        <div class="box1">Riajul islam</div>
+        <div class="box2">Pavel</div>
+    </section>
 </body>
 </html>
