--- a/index.html
+++ b/index.html
@@ -8,9 +8,34 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <section class="card">
-        <div class="box1">Riajul islam</div>
-        <div class="box2">Pavel</div>
-    </section>
+<section class="card">
+    <div class="box1">
+        <div class="image">
+            <img src="./images/./my-bg.png" alt="">
+        </div>
+        <div class="content">
+            <h3>Riajul islam pavel</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit culpa aspernatur nostrum veritatis explicabo illum?</p>
+        </div>
+    </div>
+    <div class="box1">
+        <div class="image">
+            <img src="./images/./jhankar2.png" alt="">
+        </div>
+        <div class="content">
+            <h3>Riajul islam pavel</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit culpa aspernatur nostrum veritatis explicabo illum?</p>
+        </div>
+    </div>
+    <div class="box1">
+        <div class="image">
+            <img src="./images/./jhankar.png" alt="">
+        </div>
+        <div class="content">
+            <h3>Riajul islam pavel</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit culpa aspernatur nostrum veritatis explicabo illum?</p>
+        </div>
+    </div>
+</section>
 </body>
 </html>
