--- a/index.html
+++ b/index.html
@@ -8,34 +8,16 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<section class="card">
-    <div class="box1">
-        <div class="image">
-            <img src="./images/./my-bg.png" alt="">
+    <div class="container">
+        <div class="box1">
+            <div class="card1">card1</div>
+            <div class="card2">card2</div>
         </div>
-        <div class="content">
-            <h3>Riajul islam pavel</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit culpa aspernatur nostrum veritatis explicabo illum?</p>
-        </div>
-    </div>
-    <div class="box1">
-        <div class="image">
-            <img src="./images/./jhankar2.png" alt="">
-        </div>
-        <div class="content">
-            <h3>Riajul islam pavel</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit culpa aspernatur nostrum veritatis explicabo illum?</p>
+        <div class="box2">
+            <div class="card3">card3</div>
+            <div class="card4">card4</div>
         </div>
     </div>
-    <div class="box1">
-        <div class="image">
-            <img src="./images/./jhankar.png" alt="">
-        </div>
-        <div class="content">
-            <h3>Riajul islam pavel</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit culpa aspernatur nostrum veritatis explicabo illum?</p>
-        </div>
-    </div>
-</section>
+
 </body>
 </html>
