--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="container">
         <div class="box1">
-            <div class="card1">card1</div>
-            <div class="card2">card2</div>
+            <div class="card1"></div>
+            <div class="card2"></div>
         </div>
         <div class="box2">
-            <div class="card3">card3</div>
-            <div class="card4">card4</div>
+            <div class="card3"></div>
+            <div class="card4"></div>
         </div>
     </div>
 
